\name{NEWS}
\title{News for package \pkg{smurf}}
\encoding{UTF-8}


\section{Changes in version 1.1.4 (2023-01-30)}{

    \itemize{
      \item Change \code{C++} standard from \code{C++14} to \code{C++17} (default for \code{R 4.3.0}).
      }
}


\section{Changes in version 1.1.3 (2022-05-06)}{

    \itemize{
      \item Fix bug with \code{ifelse} and \code{NULL} when computing GLM penalty weights for a design matrix with full rank (\href{https://gitlab.com/TReynkens/smurf/-/issues/7}{#7}).
      }
}


\section{Changes in version 1.1.2 (2021-04-17)}{

    \itemize{
      \item Add \pkg{rmarkdown} to the Suggests field in the \code{DESCRIPTION} file to avoid problems with \pkg{knitr} version >= 1.32.
      }
}

\section{Changes in version 1.1.1 (2021-03-26)}{

    \itemize{
      \item Remove 'LazyData' from \code{DESCRIPTION} file as no data directory is present.
      }
}


\section{Changes in version 1.1.0 (2021-03-12)}{

  \subsection{Major changes}{
    \itemize{
      \item Only apply ridge penalty to relevant predictors when determining GLM penalty weights.
      \item Correctly determine if the design matrix has full rank.
      \item Optimal values of \code{lambda}, in examples and vignette, are re-determined after changes in computation of GLM penalty weights.
      \item Use \code{C++14} (instead of \code{C++11}) which requires \code{R} version 3.4 or higher.
      }
  }

  
  \subsection{Minor changes:}{
    \itemize{
      \item \code{glmsmurf}: Check that factors have at least two levels.
      \item Update Devriendt et al. (2021) reference.
    }
  }
}

\section{Changes in version 1.0.7 (2020-11-24)}{

  \subsection{Changes in \code{R}-code:}{
      \itemize{
        \item \code{plot_lambda}: Properly check whether the object \code{x} of class \code{glmsmurf} contains components related to the selection of the sparsity parameter \code{lambda}.
        \item Use named families for \pkg{glmnet} whenever possible as this is faster.
        }
  }
}

