@@ -1,8 +1,8 @@
 Type: Package
 Package: smurf
 Title: Sparse Multi-Type Regularized Feature Modeling
-Version: 1.1.4
-Date: 2023-01-30
+Version: 1.1.5
+Date: 2023-03-22
 Authors@R: c(
           person("Tom", "Reynkens", email = "tomreynkens@hotmail.com", role = c("aut", "cre"), 
                  comment = c(ORCID = "0000-0002-5516-5107")),
@@ -15,8 +15,7 @@ License: GPL (>= 2)
 BugReports: https://gitlab.com/TReynkens/smurf/-/issues
 Depends: R (>= 3.4)
 Imports: catdata, glmnet (>= 4.0), graphics, MASS, Matrix, methods,
-        mgcv, parallel, RColorBrewer, Rcpp (>= 0.12.12), speedglm,
-        stats
+        mgcv, parallel, RColorBrewer, Rcpp (>= 0.12.12), stats
 Suggests: bookdown, knitr, rmarkdown, roxygen2 (>= 6.0.0), testthat
 LinkingTo: Rcpp, RcppArmadillo (>= 0.8.300.1.0)
 VignetteBuilder: knitr
@@ -24,10 +23,10 @@ ByteCompile: yes
 Encoding: UTF-8
 NeedsCompilation: yes
 RoxygenNote: 7.2.3
-Packaged: 2023-01-30 06:42:29 UTC; tom
+Packaged: 2023-03-22 16:17:16 UTC; tom
 Author: Tom Reynkens [aut, cre] (<https://orcid.org/0000-0002-5516-5107>),
   Sander Devriendt [aut],
   Katrien Antonio [aut]
 Maintainer: Tom Reynkens <tomreynkens@hotmail.com>
 Repository: CRAN
-Date/Publication: 2023-01-30 08:40:02 UTC
+Date/Publication: 2023-03-22 17:00:06 UTC
