@@ -1,37 +1,37 @@
-0a94c5e5486c22719a65a8c7c6a53ee6 *DESCRIPTION
-41e3e743d7bb92856da794662555e316 *NAMESPACE
+7f58e12d5736b0e663e7a63603df3c7e *DESCRIPTION
+0b33217be58788f36540297ea76a6160 *NAMESPACE
 16f180fbf0d80c4e4c22f3780f911b92 *R/Lambda_max.R
 2ee0d0b8ecdde5b7b6f244a6a8e4cf42 *R/Lambda_select.R
 fc2baba6f17b87e0e9e427f20a8ea7df *R/PO.R
 2193da80cc759fc8cf48508df0d456b1 *R/Penalty.R
 ddf976a889c7247542e511e993981880 *R/Penalty_matrices.R
-80619a8adafcd0a8fb66cf8c74e709e4 *R/Penalty_weights.R
+0a484bb72002a9cbf2fa81993759f464 *R/Penalty_weights.R
 4638d6514e858bf933a7819bc12acfe1 *R/Penalty_weights_GAM.R
 b8ea4f4ea8d0e24c1bda3c96330cad34 *R/RcppExports.R
 e2a2634f4516302dddccc6f958a1c8ed *R/check_input.R
 2a20a9969c80b459a00a1ab3e245c3c8 *R/coef.R
 a7f3409de1462983311ba87cbc119ee3 *R/deviance.R
 5d880111a1976537ae5da2bcd90557c8 *R/fitted.R
-172f48ae49e0a861772f2d2f9aeb08aa *R/glmsmurf-class.R
+0b87544f11f8472c6c9a0c0b36c11027 *R/glmsmurf-class.R
 a85cdc5bb4dd29e680630df495e0d70a *R/glmsmurf.R
-de076f68da15119849046d75a283abeb *R/glmsmurf_control.R
+daeed82575720dea4c01b3f11515c772 *R/glmsmurf_control.R
 37e12a599bbb5f94112bf4479343d77b *R/glmsmurf_fit.R
 f1f3fe8f97c1b17ce3d741c16f50238b *R/glmsmurf_fit_algorithm.R
-1fdc44d3e30ad354e07389d9a9cf160f *R/glmsmurf_fit_internal.R
+b3d189eb2c94162d7ca50a5fba5e4b35 *R/glmsmurf_fit_internal.R
 7eb9deb26eb7a20dde169ff3e379c3f9 *R/p.R
 046e4ed69f107cf1d46f298786258d95 *R/plot.R
 c6e867a5022de5aae95d3fbbfa9f99b3 *R/plot_lambda.R
 190c587858f3b0f3291a1ca2c46438e4 *R/predict.R
 4ca214069c676b55ffedde7c279d49b4 *R/residuals.R
-1b142dfd69558409c26885d39baac99a *R/smurf.R
+3676175e064c8def298a3674f06b4486 *R/smurf.R
 a5050cdc9296ff85d6b8a945de37b391 *R/stand.R
 606b32d7a1064fba7bb0627120af0aba *R/summary.R
-cb4924f3573383fca290a0a8e2ca5294 *build/partial.rdb
-704bdd6b91262effb720e2732bfa2fd5 *build/vignette.rds
-1d04a8706bcc970e32b1e3fc66295d7c *inst/NEWS.Rd
+cdbdb705c017565f8d24cdc91a0e6ec8 *build/partial.rdb
+7daf3bef55048b0e5a10b2b883d01f07 *build/vignette.rds
+c8a042124d6ef2bb0d318d84c85902c1 *inst/NEWS.Rd
 0241b95569adea1e130fbe189141820d *inst/doc/smurf.R
 8659b842ef6a582e332bc4b5585fc887 *inst/doc/smurf.Rmd
-89e4853bc8ff7ee5627d8fa561d1d6a8 *inst/doc/smurf.html
+956af71b9bf23117bc0a33e89c2ac28d *inst/doc/smurf.html
 1bdc8aff239ce20bddffcf4ace4fcd4d *inst/examples/Rent_example1.R
 e4ae6a4420dafdbd034abd29615c880e *inst/examples/Rent_example2.R
 17e60caac5b1080aa1656b962c3e7327 *inst/examples/Rent_example3.R
@@ -41,9 +41,9 @@ c15fc540b85e1c2e2f13415129a68897 *man/deviance.glmsmurf.Rd
 711c54e5331c9f839c403ad4a50224d0 *man/deviance_reest.Rd
 3089fd35d4afc12aa3f575fca043e3b5 *man/fitted.glmsmurf.Rd
 37404c2f93ca8e5b3906046bd91c1d39 *man/fitted_reest.Rd
-520427728f49facb5ac3dfd0679f9a3f *man/glmsmurf-class.Rd
+ba2456430b5852519d4c7a78e01d5e8f *man/glmsmurf-class.Rd
 acac987a20bed4e91a0962ff5e6b8d37 *man/glmsmurf.Rd
-db937c91578d0f33cb2fcb476997cad3 *man/glmsmurf.control.Rd
+6381285fe33ccbd5a89d0dc4a3f122c4 *man/glmsmurf.control.Rd
 a24c5da3467ebbc3ce35b78142f01b2f *man/p.Rd
 73383d1264fdaf730b0b0282d6c6b8c0 *man/plot.glmsmurf.Rd
 12bb43abaef9c1b14144b615bc3583a3 *man/plot_lambda.Rd
