@@ -56,7 +56,6 @@ importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
-importFrom(speedglm,speedglm.wfit)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,coefficients)
