@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2023-01-30" />
+<meta name="date" content="2023-03-22" />
 
 <title>Introduction to the smurf package</title>
 
@@ -361,7 +361,7 @@ display: none;
 <h1 class="title toc-ignore">Introduction to the <em>smurf</em> package</h1>
 <h4 class="author"><div class="line-block">Tom Reynkens, Sander Devriendt and Katrien Antonio<br />
 LRisk, Faculty of Economics and Business, KU Leuven</div></h4>
-<h4 class="date">2023-01-30</h4>
+<h4 class="date">2023-03-22</h4>
 
 </div>
 
